--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # N8N Configuration
 N8N_BASIC_AUTH_USER=admin
-N8N_BASIC_AUTH_PASSWORD=isF3018#
+N8N_BASIC_AUTH_PASSWORD=my_password_here
 N8N_HOST=localhost
 N8N_PORT=5678
 N8N_PROTOCOL=http
