--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ WEBHOOK_URL=http://localhost:5678/
 GENERIC_TIMEZONE=America/New_York
 
 # EC2 Instance Details
-EC2_PUBLIC_DNS=ec2-98-92-246-160.compute-1.amazonaws.com
-EC2_PUBLIC_IP=98.92.246.160
+EC2_PUBLIC_DNS=MY_PUBLIC_DNS
+EC2_PUBLIC_IP=My_PUBLIC_IP
 
 # SSH Configuration
 # Path to your EC2 SSH key
