feat:change on .env.example file

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,6 @@ EC2_PUBLIC_IP=My_PUBLIC_IP
 
 # SSH Configuration
 # Path to your EC2 SSH key
-SSH_KEY_PATH=~/.ssh/root-admin.pem
+SSH_KEY_PATH=~/path_to_your/key_file.pem
 # EC2 username (common: ec2-user, ubuntu, admin)
-EC2_USER=ec2-user
+EC2_USER=YOUT_EC2_USER
